--- a/src/main/resources/templates/cheese/remove.html
+++ b/src/main/resources/templates/cheese/remove.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-<body>
+<body class="container body-content">
 
 <h1 th:text="${title}">Default Title</h1>
 
@@ -9,7 +9,7 @@
 
 <form method="post">
 
-    <div th:each="cheese : ${cheeses}">
+    <div th:each="cheese : ${cheeses}" class="checkbox">
         <input type="checkbox" name="cheese" th:value="${cheese}" th:id="${cheese}"/>
         <label th:for="${cheese}" th:text="${cheese}"></label>
         <br />
