--- a/src/main/resources/templates/cheese/add.html
+++ b/src/main/resources/templates/cheese/add.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-<body>
+<body class="container body-content">
 <h1 th:text="${title}">Default Title</h1>
 
 <nav th:replace="fragments :: navigation"></nav>
 
-<form method="post">
-    <label for="name-field">Name</label>
-    <input id="name-field" type="text" name="cheeseName" />
-    <br />
-    <label for="desc-field">Description</label>
-    <input id="desc-field" type="text" name="cheeseDescription" />
-    <br />
+<form method="post" style="max-width:600px;">
+    <div class="form-group">
+        <label for="name-field">Name</label>
+        <input class="form-control" id="name-field" type="text" name="cheeseName" />
+    </div>
+    <div class="form-group">
+        <label for="desc-field">Description</label>
+        <input class="form-control" id="desc-field" type="text" name="cheeseDescription" />
+    </div>
     <input type="submit" value="Add Cheese" />
 </form>
 
