Displays welcome message and adds user to UserData UserData has not been fully implemented.

--- a/src/main/resources/templates/users/index.html
+++ b/src/main/resources/templates/users/index.html
@@ -8,6 +8,10 @@
 
 <nav th:replace="fragments :: navigation"></nav>
 
+<div th:if="${newUser}" class="alert alert-success">
+    <p th:text="${'Welcome ' + newUser + ', your account has been created.'}"></p>
+</div>
+
 <table class="table">
 
     <tr>
