--- a/src/main/resources/templates/cheese/index.html
+++ b/src/main/resources/templates/cheese/index.html
@@ -10,6 +10,9 @@
 
 <p th:unless="${cheeses} and ${cheeses.size()}">no cheese :(</p>
 
+<div class="alert alert-success" role="alert" th:if="${message}"
+     th:text="${message}"></div>
+
 
 <table class="table">
 
@@ -21,6 +24,7 @@
     <tr th:each="cheese : ${cheeses}">
         <td th:text="${cheese.name}"></td>
         <td th:text="${cheese.description}"></td>
+        <td><a th:href="@{'/cheese/edit/' + ${cheese.cheeseId}}">edit</a></td>
     </tr>
 
 </table>
