--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8"/>
-    <title></title>
-</head>
-<body>
+<head th:replace="fragments :: head"></head>
+<body class="container">
+<h1 th:text="${title}">Default Title</h1>
 
-    <h1 th:text="${'Welcome ' + name + '!'}"></h1>
+<nav th:replace="fragments :: navigation"></nav>
+
+    <h1 th:text="${'Welcome ' + user.username + '!'}"></h1>
 
 </body>
 </html>
