--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -12,10 +12,9 @@
 <body>
 
 <nav th:fragment="navigation">
-    <a href="/cheese">List</a> |
-    <a href="/cheese/add">Add</a> |
-    <a href="/cheese/remove">Remove</a> |
-    <a href="/category">Categories</a>
+    <a href="/cheese">Home</a> |
+    <a href="/category">Categories</a> |
+    <a href="/menu">Menus</a>
 </nav>
 
 </body>
