--- a/src/main/resources/templates/menu/add-item.html
+++ b/src/main/resources/templates/menu/add-item.html
@@ -15,6 +15,7 @@
                     th:text="${cheese.name}"
                     th:value="${cheese.id}"></option>
         </select>
+        <span th:errors="*{cheeseId}"></span>
     </div>
 
     <input type="hidden" name="menuId" th:value="*{menu.id}" />
