--- a/src/main/resources/templates/cheese/add.html
+++ b/src/main/resources/templates/cheese/add.html
@@ -7,12 +7,9 @@
 <body>
     <h1 th:text="${title}">Default Title</h1>
 
-    <a href="/cheese/add">Add Cheese</a>
-
-    <p th:unless="${cheeses} and ${cheeses.size()}">no cheese :(</p>
-
-    <ul>
-        <li th:each ="cheese : ${cheeses}" th:text="${cheese}"></li>
-    </ul>
+    <form method="post">
+        <input type="text" name="cheeseName" />
+        <input type="submit" value="Add Cheese" />
+    </form>
 </body>
 </html>
