--- a/src/main/resources/templates/menu/view.html
+++ b/src/main/resources/templates/menu/view.html
@@ -12,7 +12,7 @@
 
 <p th:unless="${menu.cheeses.size()}"><i>No cheeses yet</i></p>
 
-<p><a th:href="'/menu/add-item/' + ${menu.id}">Add Cheese</a></p>
+<p><a th:href="'/menu/add-item/' + ${menu.uid}">Add Cheese</a></p>
 
 </body>
 </html>
