--- a/src/main/resources/templates/cheese/remove.html
+++ b/src/main/resources/templates/cheese/remove.html
@@ -10,8 +10,8 @@
 <form method="post">
 
     <div th:each="cheese : ${cheeses}" class="checkbox">
-        <input type="checkbox" name="ids" th:value="${cheese.id}" th:id="${cheese.id}"/>
-        <label th:for="${cheese.id}" th:text="${cheese.name}"></label>
+        <input type="checkbox" name="ids" th:value="${cheese.uid}" th:id="${cheese.uid}"/>
+        <label th:for="${cheese.uid}" th:text="${cheese.name}"></label>
         <br />
     </div>
 
