--- a/src/main/resources/templates/menu/index.html
+++ b/src/main/resources/templates/menu/index.html
@@ -8,7 +8,7 @@
 
 <ul>
     <li th:each="menu : ${menus}">
-        <a th:href="'/menu/view/' + ${menu.id}" th:text="${menu.name}"></a>
+        <a th:href="'/menu/view/' + ${menu.uid}" th:text="${menu.name}"></a>
     </li>
 </ul>
 
