--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <title th:text="${title}">My Cheeses</title>
 
-    <link rel="stylesheet" th:href="@{css/styles.css}" />
+    <link rel="stylesheet" th:href="@{/css/styles.css}" />
     <script type="text/javascript" th:src="@{/js/script.js}"></script>
 
 </head>
